# verifiers

./: .gitignore  LICENSE  README.md  README_original.md  links.md  pyproject.toml  quickstart.sh  requirements.txt
examples/: grpo_demo.py  gsm8k_code.py  gsm8k_doublecheck.py  gsm8k_simple.py  math_doublecheck.py  math_simple.py
tests/: brave_throughput.py  eval_api.py  gsm8k_example.py  test_logging_utils.py  test_tool_rubric.py  test_tools.py  test_vllm_chat.py  test_xmlparser.py
verifiers/: __init__.py
verifiers/data/bfcl_dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
verifiers/envs/: __init__.py  base.py  bfcl_env.py  code_env.py  doublecheck_env.py  dummy_env.py  environment.py  math_env.py  multistep_env.py  simple_env.py  tool_env.py
verifiers/examples/: bfcl_agent.py  gsm8k_calculator.py  gsm8k_code.py  gsm8k_doublecheck.py  gsm8k_peft.py  gsm8k_simple.py  gsm8k_tool.py  math_code.py  math_doublecheck.py  math_simple.py  openbookqa_search.py  openbookqa_tool.py  test.py
verifiers/parsers/: xml_parser.py
verifiers/prompts/: __init__.py  few_shots.py  system_prompts.py
verifiers/rubrics/: __init__.py  base.py  bfcl_rubric.py  code_rubric.py  math_rubric.py  rubric.py  tool_rubric.py
verifiers/tools/: __init__.py  bfcl_tools.py  calculator.py  search.py
verifiers/tools/bfcl_tools/: check_tool_collision.py
verifiers/trainers/: __init__.py  grpo_env_trainer.py
verifiers/utils/: __init__.py  config_utils.py  data_utils.py  logging_utils.py  model_utils.py
