[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
license-file = "LICENSE"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "trl @ git+https://github.com/willccbb/trl.git@grpo-envs",
    "liger-kernel>=0.5.2",
    "flash-attn==2.7.3",
    "deepspeed>=0.15.4",
    "accelerate>=1.3.0",
    "vllm>=0.7.2",
    "wandb"
]