[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "deepspeed",
    "accelerate",
    "trl",
    "peft",
    "liger-kernel>=0.5.2",
    "vllm==0.7.3",
]