[project]
name = "verifiers"
authors = [
    {name = "William Brown", email = "williambrown97@gmail.com"},
]
version = "0.1.0"
description = "Verifiers for reinforcement learning with LLMs"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch",
    "setuptools",
    "deepspeed==0.16.3",
    "accelerate",
    "peft",
    "wandb",
    "rich",
    "duckduckgo-search",
    "trl @ git+https://github.com/huggingface/trl.git",
    "liger-kernel>=0.5.2",
    "vllm>=0.7.3",
    "brave-search>=0.1.8",
]
